# supavoice2

./: .gitignore  IMPLEMENTATION_PLAN.md  test_formatting.sh
ajith-macos-starter-app/: package-lock.json  package.json  vite.config.ts
ajith-macos-starter-app/src/: App.tsx
ajith-macos-starter-app/src-tauri/: Cargo.toml  tauri.conf.json
ajith-macos-starter-app/src-tauri/capabilities/: default.json
ajith-macos-starter-app/src/components/: ComponentShowcase.tsx  Titlebar.tsx
supavoice/: .gitignore  components.json  index.html  package-lock.json  package.json  tsconfig.app.json
supavoice/src/: App.tsx  styles.css
supavoice/src-tauri/: Cargo.toml  tauri.conf.json
supavoice/src-tauri/resources/: libggml-base.dylib  libggml-rpc.dylib  libllama.dylib  libmtmd.dylib  llama-batched-bench  llama-bench  llama-cli  llama-cvector-generator  llama-export-lora  llama-gguf-split  llama-imatrix  llama-mtmd-cli  llama-perplexity  llama-quantize  llama-run  llama-server  llama-tokenize  llama-tts  rpc-server
supavoice/src-tauri/src/: main.rs  preferences.rs
supavoice/src-tauri/src/audio/: recorder.rs
supavoice/src-tauri/src/formatting/: llm_formatter.rs  mod.rs
supavoice/src-tauri/src/models/: downloader.rs  mod.rs  registry.rs  types.rs
supavoice/src-tauri/src/transcription/: mod.rs  whisper.rs
supavoice/src/components/: Layout.tsx  Titlebar.tsx
supavoice/src/lib/: window.ts
supavoice/src/pages/: Settings.tsx
